module3 solution enhances

--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -28,9 +28,9 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse text-center" id="collapse-menu">
         <ul class="nav navbar-nav">
-          <li class="active hidden-sm hidden-md"><a href="#">Chicken<span class="sr-only">(current)</span></a></li>
-          <li class="hidden-sm hidden-md"><a href="#">Beef</a></li>
-          <li class="hidden-sm hidden-md"><a href="#">Sushi</a></li>
+          <li class="active hidden visible-xs"><a href="#">Chicken<span class="sr-only">(current)</span></a></li>
+          <li class="hidden visible-xs"><a href="#">Beef</a></li>
+          <li class="hidden visible-xs"><a href="#">Sushi</a></li>
         </ul>
       </div>
     </div>
