module3 solution enhances

--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -39,7 +39,7 @@
   <header class="text-center"><h2>Our Menu</h2></header>
 
   <section class="row">
-    <article class="col-md-12">
+    <article class="col-xs-12">
       <p class="article-title text-center" id="chicken">Chicken</p>
       <p class="article-body">When you have to get dinner on the table FAST, these are the 
           recipes you need in your arsenal. Each one really can be ready 
