--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -28,27 +28,56 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse text-center" id="collapse-menu">
         <ul class="nav navbar-nav">
-          <li class="active hidden visible-xs"><a href="#">Chicken<span class="sr-only">(current)</span></a></li>
-          <li class="hidden visible-xs"><a href="#">Beef</a></li>
-          <li class="hidden visible-xs"><a href="#">Sushi</a></li>
+          <li class="hidden visible-xs"><a href="#chicken">Chicken<span class="sr-only">(current)</span></a></li>
+          <li class="hidden visible-xs"><a href="#beef">Beef</a></li>
+          <li class="hidden visible-xs"><a href="#sushi">Sushi</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <header class="text-center"><h2>Our Menu</h2></header>
+  <header class="text-center" id="head"><h2>Our Menu</h2></header>
 
   <section class="row">
-    <article class="col-xs-12">
-      <p class="article-title text-center" id="chicken">Chicken</p>
-      <p class="article-body">When you have to get dinner on the table FAST, these are the 
-          recipes you need in your arsenal. Each one really can be ready 
-          in 25 minutes or less! There's something for every craving, too, 
-          with salmon dishes, chicken dinners, pastas, salads, and more. 
-          For even more easy, stress free meals, you can always check out 
-          our insanely easy weeknight dinners page!
+    <div class="col-md-4 col-sm-6">
+      <article>
+        <h3 class="article-title text-center" id="chicken">Chicken</h3>
+        <p class="article-body">When you have to get dinner on the table FAST, these are the 
+            recipes you need in your arsenal. Each one really can be ready 
+            in 25 minutes or less! There's something for every craving, too, 
+            with salmon dishes, chicken dinners, pastas, salads, and more. 
+            For even more easy, stress free meals, you can always check out 
+            our insanely easy weeknight dinners page!
         </p>
-    </article>
+        <a href="#head">Back to Top</a>
+      </article>
+    </div>
+    <div class="col-md-4 col-sm-6">
+      <article>
+        <h3 class="article-title text-center" id="beef">Beef</h3>
+        <p class="article-body">When you have to get dinner on the table FAST, these are the 
+            recipes you need in your arsenal. Each one really can be ready 
+            in 25 minutes or less! There's something for every craving, too, 
+            with salmon dishes, chicken dinners, pastas, salads, and more. 
+            For even more easy, stress free meals, you can always check out 
+            our insanely easy weeknight dinners page!
+        </p>
+        <a href="#head">Back to Top</a>
+      </article>
+    </div>
+    <div class="col-md-4 col-sm-12">
+      <article>
+        <h3 class="article-title text-center" id="sushi">Sushi</h3>
+        <p class="article-body">When you have to get dinner on the table FAST, these are the 
+            recipes you need in your arsenal. Each one really can be ready 
+            in 25 minutes or less! There's something for every craving, too, 
+            with salmon dishes, chicken dinners, pastas, salads, and more. 
+            For even more easy, stress free meals, you can always check out 
+            our insanely easy weeknight dinners page!
+        </p>
+        <a href="#head">Back to Top</a>
+      </article>
+    </div>
   </section>
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
